k8s/ckey-admin/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckey-admin
  labels:
    app: ckey-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckey-admin
  template:
    metadata:
      labels:
        app: ckey-admin
    spec:
      containers:
      - name: ckey-admin
        image: bartosz95/ckey
        args: ["start --import-realm --optimized"]
        ports:
        - name: container-port
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
