k8s/ckey-admin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ckey-admin
  labels:
    app: ckey-admin
spec:
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: container-port
  selector:
    app: ckey-admin
  type: LoadBalancer
