k8s/ckey-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckey
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - dice-game-admin
  rules:
  - host: dice-game-admin
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ckey-admin
            port:
              number: 80
